# instagiffer

./: .gitignore  LICENSE  README.md  _igf_unused.py  file1.py  file2.py  igf_animgif.py  igf_common.py  igf_paths.py  igf_ui.py  instagiffer.conf  instagiffer.py  installer.iss  main.py  make_app.sh  make_app_linux.sh  make_exe.bat  pyproject.toml  setup-cx_freeze.py  setup-mac-py2app.py  setup-win-cx_freeze.py
examples/: layered_config_demo.py
src/instagiffer/: __init__.py
src/instagiffer/config/: __init__.py  defaults.json  manager new.py  manager.py  schema.py
tests/unit/: test_config.py
