[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagiffer"
version = "2.0.0"
description = "Create optimized GIFs from videos, images, and screen captures"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Justin Todd", email = "instagiffer@gmail.com"},
    {name = "Eric Werybody (refactor)", email = "ewerybody@gmail.com"},
]
keywords = ["gif", "video", "animation", "screen-capture", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    "pyside6>=6.8",
    "pillow>=10.0",
    "yt-dlp>=2024.0",
    "pydantic>=2.0",  # For config validation
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.23",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.7",
]

[project.scripts]
instagiffer = "instagiffer.main:main"
instagiffer-cli = "instagiffer.cli:main"

[project.urls]
Homepage = "https://github.com/ewerybody/instagiffer"
Repository = "https://github.com/ewerybody/instagiffer"
"Bug Tracker" = "https://github.com/ewerybody/instagiffer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/instagiffer",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]

[tool.black]
line-length = 100
target-version = ["py314"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py314"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["instagiffer"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
