[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagiffer"
version = "1.8.2"
description = "Create optimized GIFs from videos, images, and screen captures"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-4-Clause"
authors = [
    { name = "Justin Todd", email = "instagiffer@gmail.com" },
    { name = "Eric Werner (refactor)", email = "ewerybody@gmail.com" },
]
keywords = ["gif", "video", "animation", "screen-capture", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    "pillow>=12.1.0",
    "pywin32>=311; sys_platform == 'win32'",
    "tk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "cx-freeze>=8.5.3",
]

[dependency-groups]
dev = ["cx-freeze"]

[project.scripts]
instagiffer = "instagiffer.main:main"
instagiffer-cli = "instagiffer.cli:main"

[project.urls]
Homepage = "http://instagiffer.com"
Repository = "https://github.com/ewerybody/instagiffer"
"Bug Tracker" = "https://github.com/ewerybody/instagiffer/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]
[tool.ruff.format]
quote-style = "single"
[tool.ruff.isort]
known-first-party = ["instagiffer"]


[tool.uv]
required-environments = ["sys_platform == 'win32'", "sys_platform == 'linux'"]
